feat(i18n): add "requested by" in es (#25)

--- a/locales/es-MX/translation.json
+++ b/locales/es-MX/translation.json
@@ -113,7 +113,7 @@
         },
         "avatar": {
             "title": "Avatar de {{- username}}",
-            "requested": "Requested by {{- username}}"
+            "requested": "Solicitado por {{- username}}"
         },
         "botinfo": {
             "title": "Información del Bot",
