chore(i18n): add category and announcement threads translation (#25)

--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -29,7 +29,9 @@
                 "text": "Text",
                 "voice": "Voice",
                 "stage": "Stage",
+                "category": "Category",
                 "announcement": "Announcement",
+                "announcement_threads": "Announcement Threads",
                 "forum": "Forum",
                 "media": "Media",
                 "private_thread": "Private Thread",
