--- a/locales/es-MX/translation.json
+++ b/locales/es-MX/translation.json
@@ -29,7 +29,9 @@
                 "text": "Texto",
                 "voice": "Voz",
                 "stage": "Escenario",
+                "category": "Categoría",
                 "announcement": "Anuncios",
+                "announcement_threads": "Hilos de Anuncios",
                 "forum": "Foro",
                 "media": "Media",
                 "private_thread": "Hilo Privado",
