chore(i18n): add plurals in threads (#25)

--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -34,8 +34,8 @@
                 "announcement_threads": "Announcement Threads",
                 "forum": "Forum",
                 "media": "Media",
-                "private_thread": "Private Thread",
-                "public_thread": "Public Thread"
+                "private_thread": "Private Threads",
+                "public_thread": "Public Threads"
             }
         },
         "config": {
