fix(i18n): `announcement_thread` without the s (#25)

--- a/locales/en-US/translation.json
+++ b/locales/en-US/translation.json
@@ -31,7 +31,7 @@
                 "stage": "Stage",
                 "category": "Category",
                 "announcement": "Announcement",
-                "announcement_threads": "Announcement Threads",
+                "announcement_thread": "Announcement Threads",
                 "forum": "Forum",
                 "media": "Media",
                 "private_thread": "Private Threads",
